--- a/index.html
+++ b/index.html
@@ -52,11 +52,23 @@
                        <a class="nav-link" href="BBA.html">BBA</a>
                      </li>
                       <li class="nav-item">
-                       <a class="nav-link" href="videos.html">B.Ed</a>
+                       <a class="nav-link" href="B.Ed.html">B.Ed</a>
                      </li>
                      <li class="nav-item">
                        <a class="nav-link" href="BBS.html">BBS</a>
                      </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="BBS.html">BBS</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="BBS.html">BBS</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="BBS.html">BBS</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="BBS.html">BBS</a>
+                      </li>
                      <li class="nav-item">
                        <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
@@ -72,6 +84,77 @@
          </div>
       </div>
       <!-- header section end -->
+
+
+<!---------------------------Sectiom Start------------------------->
+<div class="B.Sc Csit">
+   <div class="topnav" id="myTopnav">
+      <a href="#news" class="active">Home</a>
+      <a href="#news">First Semester</a>
+      <a href="#contact">Second Semester</a>
+      <a href="#news">Third Semester</a>
+      <a href="#contact">Fourth Semester</a>
+      <a href="#about">Fifth Semester</a>
+      <a href="#news">Sixth Semester</a>
+      <a href="#news">Seventh Semester</a>
+      <a href="#about">Eighth Semester </a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    
+   <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+   </script>
+</div>
+<!--------------------------Section End------------------------------->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <!-- banner section start -->
       <div class="banner_section layout_padding">
          <div id="main_slider" class="carousel slide" data-ride="carousel">
@@ -82,7 +165,7 @@
                         <h1 class="banner_taital">Search What's Your Problems</h1>
                         <p class="banner_text">There are many variations of Problems are Solve by Pipara Academy POvt Ltd of Sub-Branch Pipara Entertainment </p>
                      </div>
-                     <div class="play_now_bt"><a href="#">Play Now</a></div>
+                     <div class="play_now_bt"><a href="#">Search Now</a></div>
                      <h1 class="Music_text">Notes and Boooks available</h1>
                      <form class="example" action="/action_page.php">
                        <input type="text" placeholder="Search.." name="search">
@@ -99,7 +182,7 @@
                         <h1 class="banner_taital">Search me for new Notes</h1>
                         <p class="banner_text">There are many variations of Education Notes are available, but the majority have suffered alteration </p>
                      </div>
-                     <div class="play_now_bt"><a href="#">Play Now</a></div>
+                     <div class="play_now_bt"><a href="#">Search Now</a></div>
                      <h1 class="Music_text">BOOKS and Notes</h1>
                      <form class="example" action="/action_page.php">
                        <input type="text" placeholder="Search.." name="search">
@@ -116,7 +199,7 @@
                         <h1 class="banner_taital">Search Your Campus for Live Notes and Routine</h1>
                         <p class="banner_text">There are many Campus listed on here for live and Class Notes are available, but this is only informations Notes </p>
                      </div>
-                     <div class="play_now_bt"><a href="#">Read More</a></div>
+                     <div class="play_now_bt"><a href="#">Search More</a></div>
                      <h1 class="Music_text">Music</h1>
                      <form class="example" action="/action_page.php">
                        <input type="text" placeholder="Search.." name="search">
@@ -154,7 +237,7 @@
                   <div class="images_main">
                      <div class="image_1"><img src="images/img-1.png" class="image_1"></div>
                      <div class="text_main">
-                        <h2 class="business_text">Business News</h2>
+                        <h2 class="business_text">B.Sc Csit</h2>
                         <p class="date_text">01/03/2019</p>
                      </div>
                      <p class="ipsum_text">                                                                    </p>
@@ -165,7 +248,7 @@
                   <div class="images_main">
                      <div class="image_1"><img src="images/img-2.png" class="image_1"></div>
                      <div class="text_main">
-                        <h2 class="business_text">Business News</h2>
+                        <h2 class="business_text">BB.Sc Csit</h2>
                         <p class="date_text">01/03/2019</p>
                      </div>
                      <p class="ipsum_text">                                                                                         </p>
@@ -176,7 +259,7 @@
                   <div class="images_main">
                      <div class="image_1"><img src="images/img-3.png" class="image_1"></div>
                      <div class="text_main">
-                        <h2 class="business_text">Business News</h2>
+                        <h2 class="business_text">BB.Sc Csit</h2>
                         <p class="date_text">01/03/2019</p>
                      </div>
                      <p class="ipsum_text">                                                                                         </p>
@@ -187,7 +270,7 @@
                   <div class="images_main">
                      <div class="image_1"><img src="images/img-4.png" class="image_1"></div>
                      <div class="text_main">
-                        <h2 class="business_text">Business News</h2>
+                        <h2 class="business_text">B.Sc Csit</h2>
                         <p class="date_text">01/03/2019</p>
                      </div>
                      <p class="ipsum_text">                                                                                      </p>
@@ -218,7 +301,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-5.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Business News</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -229,7 +312,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-6.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Business News</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -240,7 +323,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-7.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Business News</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -251,7 +334,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-8.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Business News</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -266,7 +349,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-5.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Business News</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -277,7 +360,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-6.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Business News</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -288,7 +371,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-7.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Business News</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -299,7 +382,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-8.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Business News</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -314,10 +397,10 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-5.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Music</h2>
+                                 <h2 class="business_text">                                         </h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
-                              <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
+                              <p class="ipsum_text">                                                 </p>
                               <div class="seemor_bt_1"><a href="#">See More</a></div>
                            </div>
                         </div>
@@ -325,7 +408,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-6.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Music</h2>
+                                 <h2 class="business_text">                                            </h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -336,7 +419,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-7.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Music & Video</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -347,7 +430,7 @@
                            <div class="images_main">
                               <div class="image_1"><img src="images/img-8.png" class="image_1"></div>
                               <div class="text_main">
-                                 <h2 class="business_text">Live Event Music</h2>
+                                 <h2 class="business_text">B.Sc Csit</h2>
                                  <p class="date_text">01/03/2019</p>
                               </div>
                               <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -389,7 +472,7 @@
                               <h2 class="upcoming_text">Upcoming <br>New<br> videos</h2>
                            </div>
                            <div class="text_main">
-                              <h2 class="business_text">Music</h2>
+                              <h2 class="business_text">B.Sc Csit</h2>
                               <p class="date_text">01/03/2019</p>
                            </div>
                            <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -402,7 +485,7 @@
                               <h2 class="upcoming_text">Upcoming <br>New<br> videos</h2>
                            </div>
                            <div class="text_main">
-                              <h2 class="business_text">Music</h2>
+                              <h2 class="business_text">B.Sc Csit</h2>
                               <p class="date_text">01/03/2019</p>
                            </div>
                            <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -415,7 +498,7 @@
                               <h2 class="upcoming_text">Upcoming <br>New<br> videos</h2>
                            </div>
                            <div class="text_main">
-                              <h2 class="business_text">Music & Video</h2>
+                              <h2 class="business_text">RRM Campus</h2>
                               <p class="date_text">01/03/2019</p>
                            </div>
                            <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -425,10 +508,10 @@
                      <div class="col-lg-3 col-sm-6">
                         <div class="images_main">
                            <div class="video_box">
-                              <h2 class="upcoming_text">Upcoming <br>New<br> videos</h2>
+                              <h2 class="upcoming_text">Upcoming <br>Notes<br> videos</h2>
                            </div>
                            <div class="text_main">
-                              <h2 class="business_text">Live Event Music</h2>
+                              <h2 class="business_text">Live Event Classes</h2>
                               <p class="date_text">01/03/2019</p>
                            </div>
                            <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
@@ -445,7 +528,7 @@
                               <h2 class="upcoming_text">Upcoming <br>New<br> videos</h2>
                            </div>
                            <div class="text_main">
-                              <h2 class="business_text">Music</h2>
+                              <h2 class="business_text">RRM Campus</h2>
                               <p class="date_text">01/03/2019</p>
                            </div>
                            <p class="ipsum_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
